--- a/src/pamflet/custom.css
+++ b/src/pamflet/custom.css
@@ -5,12 +5,13 @@ p + p {
 
 pre, code, tt {
   font-family: monospace;
+  overflow: auto;
 }
 
 body {
-    font-family: "Helvetica Neue", Arial, Helvetica, sans-serif;
+  font-family: "Helvetica Neue", Arial, Helvetica, sans-serif;
 }
 
 body p, h1, h2, h3, h4, h5, h6, blockquote, a, a.page, li {
-    color: black;
+  color: black;
 }
