--- a/src/nanoc/content/stylesheet.css
+++ b/src/nanoc/content/stylesheet.css
@@ -8,25 +8,17 @@ body {
   font-family: "Helvetica Neue", Arial, Helvetica, sans-serif;
 }
 
-a:link, a:visited, a:hover {
-  color: black;
-}
-
 #main {
   position: absolute;
-
   top: 40px;
   left: 280px;
-
   width: 580px;
 }
 
 #main h1 {
   font-size: 40px;
   font-weight: normal;
-
   line-height: 40px;
-
   letter-spacing: -1px;
 }
 
@@ -34,7 +26,6 @@ a:link, a:visited, a:hover {
   margin: 20px 0;
 
   font-size: 15px;
-
   line-height: 20px;
 }
 
@@ -44,25 +35,20 @@ a:link, a:visited, a:hover {
 
 #main li {
   font-size: 15px;
-
   line-height: 20px;
 }
 
-#main ul li {
-  list-style-type: square;
+#main a:link, #main a:visited, #main a:hover {
+  color: black;
 }
 
 #sidebar {
   position: absolute;
-
   top: 40px;
   left: 20px;
   width: 200px;
-
   padding: 20px 20px 0 0;
-
   border-right: 1px solid #ccc;
-
   text-align: right;
 }
 
@@ -80,25 +66,19 @@ a:link, a:visited, a:hover {
 
 #sidebar h2 {
   text-transform: uppercase;
-
   font-size: 13px;
-
   color: #333;
-
   letter-spacing: 1px;
-
   line-height: 20px;
 }
 
 #sidebar ul {
   list-style-type: none;
-
   margin: 20px 0;
 }
 
 #sidebar li {
   font-size: 14px;
-
   line-height: 20px;
 }
 
