--- a/src/nanoc/layouts/default.html
+++ b/src/nanoc/layouts/default.html
@@ -15,8 +15,8 @@
       <img src="/scodec-logo.png" alt="logo" id="logo">
       <h2>Documentation</h2>
       <ul>
-        <li><a href="guide">Guide</a></li>
-        <li><a href="api">ScalaDoc</a></li>
+        <li><a href="/guide">Guide</a></li>
+        <li><a href="/api">ScalaDoc</a></li>
         <li><a href="<%= @items['/releases/'].path %>">Releases</a></li>
       </ul>
       <h2>Community</h2>
